# cjr

./: CMakeLists.txt  Doxyfile
cmake/: googletest-download.cmake
docs/doxygen/: DoxygenLayout.xml
docs/doxygen/html/: annotated.html  bug.html  cjr_8hpp.html  cjr_8hpp_source.html  classcjr_1_1base_range-members.html  classcjr_1_1base_range.html  classcjr_1_1exception_1_1different_base_exception-members.html  classcjr_1_1exception_1_1different_base_exception.html  classcjr_1_1exception_1_1division_by_zero_exception-members.html  classcjr_1_1exception_1_1division_by_zero_exception.html  classcjr_1_1exception_1_1exception-members.html  classcjr_1_1exception_1_1exception.html  classcjr_1_1exception_1_1invalid_base_exception-members.html  classcjr_1_1exception_1_1invalid_base_exception.html  classcjr_1_1number-members.html  classcjr_1_1number.html  classes.html  dir_63d3ea0de2424a750c24486ca5639d5c.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6e33d6500a76933db4361f663e54ab12.html  dir_7a2f11b1b84d477ddb31f885d181e0be.html  exception_8hpp_source.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  index.html  (+6 more)
sandbox/: CMakeLists.txt  sandbox.cpp
src/: CMakeLists.txt  cjr.hpp
src/exceptions/: exception.hpp  numberExceptions.hpp
src/numbers/: number.hpp  utils.hpp
src/numbers/implementation/: number.cpp  numberAddSubtract.cpp  numberComparison.cpp  numberMultiplyDivide.cpp  numberUtils.cpp
test/: CMakeLists.txt
test/numbers/: addSubtractTest.cpp  comparisonTest.cpp  generalTest.cpp  multiplyDivideTest.cpp  utilsTest.cpp
(+57 files in other folders)
